--- a/notes/06-20230920-numpy-arrays.ipynb
+++ b/notes/06-20230920-numpy-arrays.ipynb
@@ -6,7 +6,7 @@
         "id": "hgyLvMR_A_1F"
       },
       "source": [
-        "# `numpy` 패키지와 배열"
+        "# 2023-2 언어데이터과학 6강 (2023-09-20) `numpy` 패키지와 배열"
       ]
     },
     {
