--- a/notes/06-20230920-numpy-arrays.ipynb
+++ b/notes/06-20230920-numpy-arrays.ipynb
@@ -147,7 +147,25 @@
         "\n",
         "벡터를 표현할 수 있는 자료형은 파이썬에 내장되어 있지 않고, `numpy`라는 파이썬 패키지에 들어 있다. 파이썬에서 패키지(package)는 여러 모듈(module)로 이루어진 폴더를 말한다. 패키지를 모은 것은 라이브러리(library)라고 한다.\n",
         "\n",
-        "`numpy` 패키지는 Colab 환경에 포함되어 있으므로 따로 설치할 필요는 없다. 개인 컴퓨터에서 사용하는 경우는 설치를 해 주어야 한다.\n",
+        "`numpy` 패키지는 Colab 환경에 포함되어 있으므로 따로 설치할 필요는 없다.\n",
+        "\n",
+        "개인 컴퓨터에서 사용하는 경우는 기본적으로 설치를 해 주어야 한다. 아래의 코드 셀을 실행하면 `numpy`의 최신 버전이 설치된다."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%pip install -U numpy"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "\n",
         "\n",
         "`numpy`는 파이썬을 활용할 때 아주 자주 쓰이는 패키지다. 특히 기존의 머신러닝에서는 거의 항상 사용된다. 사용할 때마다 다섯 글자씩 이름을 입력하는 것이 번거로우므로, 관습적으로 `np` 두 글자로 줄여서 가져온다."
       ]
