--- a/notes/07-20220925-pandas-seaborn.ipynb
+++ b/notes/07-20220925-pandas-seaborn.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -44,21 +44,49 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "--2023-09-25 12:48:18--  https://raw.githubusercontent.com/suparklingmin/LingDataSci2023/main/data/vowel.tar.gz\n",
+            "--2023-09-25 12:51:47--  https://raw.githubusercontent.com/suparklingmin/LingDataSci2022/main/data/f0-data.csv\n",
+            "Resolving raw.githubusercontent.com... 185.199.108.133, 185.199.110.133, 185.199.109.133, ...\n",
+            "Connecting to raw.githubusercontent.com|185.199.108.133|:443... "
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 9706 (9.5K) [text/plain]\n",
+            "Saving to: ‘all-f0.csv’\n",
+            "\n",
+            "all-f0.csv          100%[===================>]   9.48K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2023-09-25 12:51:47 (31.0 MB/s) - ‘all-f0.csv’ saved [9706/9706]\n",
+            "\n",
+            "--2023-09-25 12:51:47--  https://raw.githubusercontent.com/suparklingmin/LingDataSci2022/main/data/female-f0-vot-data.csv\n",
             "Resolving raw.githubusercontent.com... 185.199.108.133, 185.199.110.133, 185.199.109.133, ...\n",
             "Connecting to raw.githubusercontent.com|185.199.108.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 404 Not Found\n",
-            "2023-09-25 12:48:18 ERROR 404: Not Found.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 7947 (7.8K) [text/plain]\n",
+            "Saving to: ‘female-f0-vot.csv’\n",
             "\n",
-            "mv: rename vowel.tar.gz to ../data/vowel.tar.gz: No such file or directory\n",
-            "tar: Error opening archive: Failed to open '../data/vowel.tar.gz'\n"
+            "female-f0-vot.csv   100%[===================>]   7.76K  --.-KB/s    in 0.003s  \n",
+            "\n",
+            "2023-09-25 12:51:48 (2.17 MB/s) - ‘female-f0-vot.csv’ saved [7947/7947]\n",
+            "\n"
           ]
         }
       ],
       "source": [
-        "# LDS2023/data/vowel 폴더를 만들고 폴더 안에 all-f0.csv 파일과 women-f0-vot.csv 파일을 저장한다.\n",
-        "\n",
-        "!wget https://raw.githubusercontent.com/suparklingmin/LingDataSci2023/main/data/vowel.tar.gz\n",
+        "!wget https://raw.githubusercontent.com/suparklingmin/LingDataSci2022/main/data/f0-data.csv -O all-f0.csv\n",
+        "!wget https://raw.githubusercontent.com/suparklingmin/LingDataSci2022/main/data/female-f0-vot-data.csv -O female-f0-vot.csv"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "\n",
         "!mkdir ../data\n",
         "!mv vowel.tar.gz ../data\n",
