--- a/notes/07-20230925-pandas-dataframe.ipynb
+++ b/notes/07-20230925-pandas-dataframe.ipynb
@@ -6,7 +6,7 @@
         "id": "yVtxmAoT1sK8"
       },
       "source": [
-        "# 2023-2 언어데이터과학 7강 (2023-09-25) `pandas` 패키지와 배열"
+        "# 2023-2 언어데이터과학 7강 (2023-09-25) `pandas` 패키지와 데이터프레임"
       ]
     },
     {
