--- a/notes/12-20231018-preprocessing-modified.ipynb
+++ b/notes/12-20231018-preprocessing-modified.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,22 +12,23 @@
     "# json 파일을 읽기 위한 라이브러리 가져오기\n",
     "import json\n",
     "\n",
-    "#\n",
+    "# 상태 진행 상황을 막대로 보기\n",
     "from tqdm import tqdm\n",
-    "import pickle\n",
+    "\n",
+    "# 데이터프레임으로 저장하기\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 47424/47424 [00:18<00:00, 2508.57it/s]\n"
+      "100%|██████████| 47424/47424 [00:30<00:00, 1544.36it/s]\n"
      ]
     }
    ],
@@ -50,18 +51,23 @@
     "\n",
     "    # JSON 파일을 열어서 그 내용을 data라는 이름으로 저장하기\n",
     "    with z.open(filename) as f:  \n",
-    "      data = json.loads(f.read().decode(\"utf-8\"))  \n",
-    "      file_id = data['id']\n",
+    "      # f.read() -- binary\n",
+    "      # f.read().decode('utf-8') -- str\n",
+    "      data = json.loads(f.read().decode(\"utf-8\"))\n",
+    "      file_id = data['id'] # id of file\n",
     "\n",
     "    # 현재 읽고 있는 파일에 포함된 문서를 하나씩 처리하기\n",
+    "    # data['document'] -- list of documents\n",
     "    for document in data['document']:\n",
     "      # 발화 목록 업데이트:\n",
+    "      # document['utterance'] -- list of utterances\n",
     "      for utterance in document['utterance']:\n",
     "        utterance.update({'speaker_id': f'{file_id}_{utterance[\"speaker_id\"]}'})\n",
     "        utterances_list.append(utterance)\n",
     "\n",
     "      # 발화자 목록 업데이트:\n",
     "      # 문서의 메타 정보에서 발화자 값을 하나씩 처리하기\n",
+    "      # document['metadata']['speaker'] -- list of speakers\n",
     "      for speaker in document['metadata']['speaker']:\n",
     "        speaker.update({'speaker_id': f'{file_id}_{speaker[\"id\"]}'})\n",
     "        speakers_list.append(speaker)"
@@ -69,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,11 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# utterances_list: 같은 구조의 딕셔너리로 이루어진 리스트\n",
     "df_utterances = pd.DataFrame(utterances_list).to_csv('../NIKL_OM_utterances.csv')\n",
+    "\n",
+    "# pd.DataFrame.drop_duplicates() 중복된 row를 지워 주는 메소드\n",
     "df_speakers = pd.DataFrame(speakers_list).drop_duplicates().to_csv('../NIKL_OM_speakers.csv')"
    ]
   },
