--- a/notes/12-20231018-analyzing-wanjeon.ipynb
+++ b/notes/12-20231018-analyzing-wanjeon.ipynb
@@ -1,12 +1,48 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 오늘의 목표\n",
+    "\n",
+    "1. 일상 대화 말뭉치의 각 발화에 발화자 정보를 추가하여 데이터프레임으로 저장할 수 있다.\n",
+    "2. 부사적으로 쓰이는 '완전'과 '완전히', '아주'의 사용 빈도를 발화자의 연령과 성별에 따라 집계할 수 있다.\n",
+    "\n",
+    "## 참고 문헌\n",
+    "\n",
+    "김다미. (2021). 〈부사적 쓰임을 보이는 ‘완전’에 대한 통시적 고찰〉. 《국어학》 97, 439-475. https://kiss.kstudy.com/thesis/thesis-view.asp?key=3878140\n",
+    "\n",
+    "> ‘완전(<완젼, 完全)’의 부사적 용법은 20세기 초 문헌 자료에서 발견되기 시작한다. 이는 앞 시기에 주로 다른 명사에 선행하여 그 의미를 수식/한정하던 관 형사적 용법의 명사 ‘완전’이 통사적 분포를 확장해 나가는 것으로 이해된다. 그러나 이 시기 ‘완전’의 의미는 ‘모든 측면에서 두루 (완벽하게)’ 정도의 추상성에 머무르고 있으며, **20세기 말에 이르러서야 비로소 강조부사 ‘아주, 매우, 정말, 진짜’ 등에 준하는 더욱 추상화된 의미로서의 용법이 관찰된다.** 이러한 ‘완전’의 통사적 분포 및 의미/기능의 확장 양상이 보편적인 문법화의 방향을 따른다는 것은 부사 ‘아주(<아조)’와의 비교적 관찰을 통해서도 확인해 볼 수 있다.\n",
+    "\n",
+    "## 가설\n",
+    "\n",
+    "발화자의 연령이 낮을수록 '완전'의 사용 빈도가 '아주'보다 높을 것이다(→ 발화자의 연령 정보가 필요하다)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 실습"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 데이터 가공\n",
+    "\n",
+    "### 발화(utterance) 정보를 데이터프레임으로 읽기"
    ]
   },
   {
@@ -153,6 +189,13 @@
     "utterances.dropna(inplace=True)\n",
     "utterances = utterances[['id', 'form', 'speaker_id']]\n",
     "utterances"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 발화자(speaker) 정보를 데이터프레임으로 읽기"
    ]
   },
   {
@@ -540,6 +583,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 발화 정보와 발화자 정보를 통합한 데이터프레임 만들기"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -696,6 +746,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 파일로 쓰기\n",
+    "\n",
+    "#### CSV 파일로 저장하기"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -713,12 +772,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "-rw-rw-rw- 1 codespace codespace 256832819 Oct 25 05:59 ../data/NIKL_OM_form_age_sex.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 파일 크기 확인하기 256_832_819 bytes -> 약 256MB\n",
+    "!ls -l ../data/NIKL_OM_form_age_sex.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### TAR.GZ 파일로 압축하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "tar: Removing leading `../' from member names\n"
      ]
     }
    ],
    "source": [
-    "!tar -czf ../data/NIKL_OM_form_age_sex.csv.tar.gz ../data/NIKL_OM_form_age_sex.csv"
+    "!tar -czf ../data/NIKL_OM_form_age_sex.csv.tar.gz ../data/NIKL_OM_form_age_sex.csv\n",
+    "\n",
+    "# For MAC OS\n",
+    "# !COPYFILE_DISABLE=1 tar -czf ../data/NIKL_OM_form_age_sex.csv.tar.gz ../data/NIKL_OM_form_age_sex.csv"
    ]
   },
   {
@@ -731,11 +818,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 데이터 분석"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 데이터프레임에서 '완전'과 '아주'의 사용 빈도 세기"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 코퍼스 전체에서 세기"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 데이터프레임의 'form' column에서 '완전'과 '아주'의 사용 빈도를 계산하는 함수\n",
     "def count_wanjeon(df):\n",
     "  output = {}\n",
     "  output['완전'] = df['form'].str.count(r'\\b완전\\b').sum()\n",
@@ -745,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +865,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +888,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,17 +899,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 백분율을 구하는 함수\n",
     "def get_percent(series):\n",
-    "    return series.div(series.sum(axis=1), axis=0) * 100"
+    "    return series.div(series.sum()) * 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 연령 요인별로 세기"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +984,7 @@
        "40대 이상   689   464"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -946,18 +1063,25 @@
        "40대 이상  59.757155  40.242845"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_percent(counts_by_age)"
+    "counts_by_age.apply(get_percent, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 성 요인별로 세기"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1136,7 @@
        "여성   7757  2942"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1079,18 +1203,25 @@
        "여성   72.502103  27.497897"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_percent(counts_by_sex)"
+    "counts_by_sex.apply(get_percent, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 연령, 성 요인별로 세기"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1318,7 @@
        "       여성    601   381"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1296,13 +1427,13 @@
        "       여성   61.201629  38.798371"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_percent(counts_by_age_sex)"
+    "counts_by_age_sex.apply(get_percent, axis=1)"
    ]
   }
  ],
