--- a/notes/11-20231016-wordcloud-nsmc.ipynb
+++ b/notes/11-20231016-wordcloud-nsmc.ipynb
@@ -913,7 +913,8 @@
     }
    ],
    "source": [
-    "counts_exclusive = counts.copy()\n",
+    "from copy import deepcopy\n",
+    "counts_exclusive = deepcopy(counts)\n",
     "# DO SOMETHING HERE\n",
     "# DO SOMETHING HERE\n",
     "# DO SOMETHING HERE\n",
